// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renders Tabs properly 1`] = `
<div>
  <div
    class="tabs"
  >
    <div
      class="seperator"
    >
      <div
        class="tab"
        role="button"
      >
        Like 1
        <style>
          
.tab {
	background: #dedede;
	padding: 10px 20px;
	color: #333333;
	text-align: center;
}

        </style>
      </div>
    </div>
    <div
      class="seperator"
    >
      <div
        class="tab"
        role="button"
      >
        Comment 1
        <style>
          
.tab {
	background: #dedede;
	padding: 10px 20px;
	color: #333333;
	text-align: center;
}

        </style>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tabs renders not render unwanted child 1`] = `
<div>
  <div
    class="tabs"
  >
    <div
      class="seperator"
    >
      <div
        class="tab"
        role="button"
      >
        Like 1
        <style>
          
.tab {
	background: #dedede;
	padding: 10px 20px;
	color: #333333;
	text-align: center;
}

        </style>
      </div>
    </div>
  </div>
</div>
`;
